<resources>
    <!-- <APPLICATION> -->
    <string name="app_name">RemoteClient</string>
    <string name="file_provider">"android.support.v4.content.FileProvider"</string>
    <!-- </APPLICATIONS> -->

    <!-- <GUI> -->
    <string name="ip_value">192.168.0.101</string>
    <string name="ip_label">IP</string>
    <string name="password_value">1234</string>
    <string name="password_label">PW</string>
    <string name="button_connect">Connect</string>
    <string name="transferring">Transferring image&#8230;</string>
    <string name="tcp_value">TCP</string>
    <string name="udp_value">UDP</string>
    <!-- </GUI> -->

    <!-- <KEYBOARD> -->
    <string name="key_esc">esc</string>
    <string name="key_f1">F1</string>
    <string name="key_f2">F2</string>
    <string name="key_f3">F3</string>
    <string name="key_f4">F4</string>
    <string name="key_f5">F5</string>
    <string name="key_f6">F6</string>
    <string name="key_f7">F7</string>
    <string name="key_f8">F8</string>
    <string name="key_f9">F9</string>
    <string name="key_f10">F10</string>
    <string name="key_f11">F11</string>
    <string name="key_f12">F12</string>
    <string name="key_print">prt sc</string>
    <string name="key_delete">delete</string>

    <string name="key_back_quote">`</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_minus">-</string>
    <string name="key_equals">=</string>
    <string name="key_backspace">⟵</string>

    <string name="key_tab">tab</string>
    <string name="key_q">Q</string>
    <string name="key_w">W</string>
    <string name="key_e">E</string>
    <string name="key_r">R</string>
    <string name="key_t">T</string>
    <string name="key_y">Y</string>
    <string name="key_u">U</string>
    <string name="key_i">I</string>
    <string name="key_o">O</string>
    <string name="key_p">P</string>
    <string name="key_open_bracket">[</string>
    <string name="key_close_bracket">]</string>
    <string name="key_back_slash">\\</string>

    <string name="key_caps_lock">caps lock</string>
    <string name="key_a">A</string>
    <string name="key_s">S</string>
    <string name="key_d">D</string>
    <string name="key_f">F</string>
    <string name="key_g">G</string>
    <string name="key_h">H</string>
    <string name="key_j">J</string>
    <string name="key_k">K</string>
    <string name="key_l">L</string>
    <string name="key_semicolon">;</string>
    <string name="key_quote">\'</string>
    <string name="key_enter">⏎</string>

    <string name="key_shift">↑</string>
    <string name="key_z">Z</string>
    <string name="key_x">X</string>
    <string name="key_c">C</string>
    <string name="key_v">V</string>
    <string name="key_b">B</string>
    <string name="key_n">N</string>
    <string name="key_m">M</string>
    <string name="key_comma">,</string>
    <string name="key_dot">.</string>
    <string name="key_slash">/</string>
    <string name="key_up">▲</string>
    <string name="key_rshift">↑</string>

    <string name="key_ctrl">ctrl</string>
    <string name="key_windows">\u229E</string>
    <string name="key_alt">alt</string>
    <string name="key_space"> </string>
    <string name="key_left">◄</string>
    <string name="key_down">▼</string>
    <string name="key_right">►</string>
    <string name="key_context_menu">𝌆</string>
    <!-- </KEYBOARD> -->

</resources>
